@@ -49,6 +49,7 @@ namespace spoton_common
 						 ** base sixteen.
 						 */
   static const int NAME_MAXIMUM_LENGTH = 64;
+  static const int STATUS_MAXIMUM_LENGTH = 64;
   static const qint64 MAXIMUM_NEIGHBOR_BUFFER_SIZE =
     20971520; /*
 	      ** The buffer size
