@@ -753,6 +753,7 @@ class spoton: public QMainWindow
   void slotSaveBuzzAutoJoin(bool state);
   void slotSaveBuzzName(void);
   void slotSaveCommonUrlCredentials(void);
+  void slotSaveCustomStatus(void);
   void slotSaveDestination(void);
   void slotSaveEmailName(void);
   void slotSaveGeoIPPath(void);
