@@ -2,6 +2,7 @@
 0.23 (05/08/2015)
 <ol>
 <li>Added libspoton_delete_urls() to libspoton. Version updated to 0.10.</li>
+<li>Custom status messages. A maximum of 64 characters will be imposed.</li>
 <li>Encapsulate data into streams and decrease Base-64 conversions. This will result in smaller messages. Previous functionality will be disrupted.</li>
 <li>Guard QList::removeAt().</li>
 <li>Replace spaces with dashes in StarBeam and e-mail attachment file names.</li>
